Fixed letter spacing, hanging, and made other improvements

--- a/css/general.css
+++ b/css/general.css
@@ -36,7 +36,6 @@ html, body {
 	text-decoration: none;
 	border-radius: 5px;
 	font-weight: 600;
-	letter-spacing: -1px;
 }
 
 .btn:hover {
