--- a/src/options/options.css
+++ b/src/options/options.css
@@ -8,7 +8,7 @@ body, html {
 	font-size: 18px;
 	background: #fff;
 	min-width: 440px;
-	height: 426px;
+	height: 417px;
 }
 
 .container {
